# walrus-hosting-site

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yaml  tailwind.config.js
.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-63ca0dcc179d7dceeb584405aef33eea4a0df4e050c37a98313aac59b213208f.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-cc3db2eb951b4401747a2eb8bfd28a428a14980177b9a55130561d91d06f45fc.json  query-d58666f6a049c251605ed0e9137c935f254350e7e7963be5656b6a0f16098362.json  query-dd029bba2ba375b98540c397e1bd3ad3788e72b8f6138572d923ba6094309cbb.json
migrations/: 0001_users.sql
src/: lib.rs  main.rs
src/app/: database.rs  server.rs
src/data/: discord_connections.rs  mod.rs  sessions.rs  users.rs
src/features/: mod.rs  not_found.rs
src/features/auth/: callback.rs  cookies.rs  data.rs  login.rs  mod.rs  refresh.rs  session.rs  types.rs
src/features/discord/: user.rs
src/features/homepage/: mod.rs  page.rs
src/utils/: crypto.rs  mod.rs  webpage.rs
src/utils/crypto/: mod.rs  tests.rs  tokens.rs
src/utils/snowflake/: mod.rs  tests.rs
