[package]
name = "walrus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
dotenv = "0.15.0"
maud = "0.27.0"
tokio = { version = "1.48.0", features=["rt-multi-thread"] }
tower-http = {version = "0.6.6", features=["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
