[package]
name = "walrus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
axum-extra = { version = "0.10.3", features = ["cookie"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenv = "0.15.0"
maud = "0.27.0"
once_cell = "1.21.3"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = "1.0.228"
sqlx = { version = "0.8.6", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "tls-rustls",
    "chrono",
    "migrate",
    "macros",
] }
time = "0.3.44"
tokio = { version = "1.48.0", features=["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
urlencoding = "2.1.3"
